terraform/main.tf
provider "aws" {
  profile = "serg123e"
  region  = "eu-central-1"
}

provider "time" {
  # no configuration required
}

# Create a VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "main-vpc"
  }
}

# Create an Internet Gateway
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
  }
}

# Create a public route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "public-route-table"
  }
}

# Associate public subnets with the route table
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet_a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.subnet_b.id
  route_table_id = aws_route_table.public.id
}

# Create subnets
resource "aws_subnet" "subnet_a" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "eu-central-1a"
  tags = {
    Name = "subnet-a"
  }
}

resource "aws_subnet" "subnet_b" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"
  availability_zone = "eu-central-1b"
  tags = {
    Name = "subnet-b"
  }
}

# Create a security group
resource "aws_security_group" "rds_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "rds-security-group"
  }
}

# Create a single RDS instance
resource "aws_db_instance" "main_db" {
  allocated_storage    = 20
  storage_type         = "gp2"
  engine               = "postgres"
  engine_version       = "16.3"
  instance_class       = "db.t3.micro"
  db_name              = "main"  # Default database name
  username             = var.db_username
  password             = var.db_password
  parameter_group_name = "default.postgres16"
  skip_final_snapshot  = true
  publicly_accessible  = true
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name = aws_db_subnet_group.main.name

  tags = {
    Name = "main-database"
  }
}

# Create DB subnet group
resource "aws_db_subnet_group" "main" {
  name       = "main-subnet-group"
  subnet_ids = [aws_subnet.subnet_a.id, aws_subnet.subnet_b.id]

  tags = {
    Name = "main-subnet-group"
  }
}

# Wait for 60 seconds to ensure the RDS instance is ready
resource "time_sleep" "wait_for_rds" {
  depends_on = [aws_db_instance.main_db]
  create_duration = "60s"
}

# Create additional databases
resource "null_resource" "create_databases" {
  depends_on = [time_sleep.wait_for_rds]

  provisioner "local-exec" {
    command = <<EOT
PGPASSWORD="${var.db_password}" psql -h ${aws_db_instance.main_db.endpoint} -U ${var.db_username} -d postgres -c "CREATE DATABASE mlflowdb;"
PGPASSWORD="${var.db_password}" psql -h ${aws_db_instance.main_db.endpoint} -U ${var.db_username} -d postgres -c "CREATE DATABASE grafanadb;"
PGPASSWORD="${var.db_password}" psql -h ${aws_db_instance.main_db.endpoint} -U ${var.db_username} -d postgres -c "CREATE DATABASE data_warehouse;"
EOT
  }
}
